tests/NormalTests/paczka1/fuzzy1/80545891.err
Error in line 1: S690 S187 14,9
Error in line 6: 9Je6 A278 8,2
Error in line 2: S690 S562 85,2
Error in line 11: s0URGsGXu A278 87,0
Error in line 15: s0URGsGXu S690 -4,2
Error in line 20: 0LEZN0E A278 73,2
Error in line 13: s0URGsGXu S690 96,1
Error in line 25: s0URGsGXu A278 15,9
